# exiot

./: .editorconfig  .gitignore  README.md  exiot.py  pylintrc  pyproject.toml  pysett.py  pytest.ini
.github/workflows/: tests.yml
examples/: echocat.c
examples/minihw_not_impl/: CMakeLists.txt
examples/minihw_not_impl/task01-hello/: solution.c  source.c
examples/minihw_not_impl/task02-echo/: multi_arg.args  multi_arg.out  solution.c  source.c
examples/minihw_not_impl/task03-exit/: CMakeLists.txt  solution.c  source.c
examples/proj_def_fail_yml/: project.yml  suite_cat.yml  suite_echo.yml
examples/proj_def_yml/: project.yml  suite_cat.yml  suite_echo.yml
examples/single/: echo.args  echo.out  err.err  err.in  exit.args  out.in
examples/single_fail/: mismatch_err.args  mismatch_err.in  mismatch_exit.args  mismatch_out.args
man/: architecture.md  directory_def.md  minihw_def.md  scenario_def.md
tests/: conftest.py  prepenv.py  test_integ_minihw_solution.py  test_integ_minihw_source.py  test_integ_sc_fail_yml.py  test_integ_sc_yml.py  test_integ_simple_directory.py  test_integ_simple_fail_dir.py  test_unit_param_parser.py  test_unit_utils_dict.py
tests/prepared_data/: echocat.c
tests/prepared_data/proj_def_yml/: suite_cat.yml  suite_echo.yml
tests/prepared_data/single/: out.out
tests/prepared_data/single_fail/: mismatch_err.err  mismatch_out.args  mismatch_out.out
