[tool.poetry]
name = "exiot"
version = "0.1.0"
description = ""
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
junitparser = "*"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
